[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-sam-labeler"
version = "0.2.0"
description = "PyQt5 annotation tool combining SAM segmentation and YOLO detection labeling."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.21,<2",
    "opencv-python>=4.5.0,<5",
    "PyQt5>=5.15.0,<6; sys_platform != 'linux' or platform_machine != 'aarch64'",
]

[project.optional-dependencies]
sam = [
    "torch>=2.0.0,<3",
    "torchvision>=0.15.0,<0.24",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]
yolo = [
    "ultralytics>=8.0.0",
]
all = [
    "yolo-sam-labeler[sam,yolo]",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
yolo-sam-label = "yolo_sam_labeler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["yolo_sam_labeler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Code quality
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["yolo_sam_labeler"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
