[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-sam-labeler"
version = "0.3.0"
description = "PyQt5 annotation tool combining SAM 1/2 segmentation and YOLO detection labeling."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.21,<2",
    # Use headless build to avoid Qt library conflict with PyQt5.
    # opencv-python ships its own Qt 5.15.x which clashes with PyQt5's Qt.
    "opencv-python-headless>=4.5.0,<5",
    "PyQt5>=5.15.0,<6; sys_platform != 'linux' or platform_machine != 'aarch64'",
]

[project.optional-dependencies]
sam = [
    "torch>=2.5.0,<3",
    "torchvision>=0.20.0,<0.24",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "SAM-2 @ git+https://github.com/facebookresearch/sam2.git",
]
yolo = [
    "ultralytics>=8.0.0",
]
all = [
    "yolo-sam-labeler[sam,yolo]",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
yolo-sam-label = "yolo_sam_labeler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["yolo_sam_labeler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Code quality
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["yolo_sam_labeler"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
